# tinycraft

./: Dockerfile  LICENSE  README.md  env.yaml  pyrightconfig.json  run-tests.py  setup.py
support/: font.go  generate_block_types.py  generate_planar_neighbors.py  generate_terrain.py  shared_library.rdbg  standalone.rdbg
tinycraft/: CMakeLists.txt  __init__.py  env.py  env_test.py  interactive_base.py  libenv.h  libenv.py  scalarize.py  subproc_vec_env.py  tools.py
tinycraft/scripts/: benchmark.py  build.py  human.py  interactive.py  measure_env_speed.py  random_agent.py
tinycraft/src/: canvas.cpp  cpp_util.cpp  envoptions.cpp  font.c  game.cpp  gl_util.cpp  glm_util.cpp  human.cpp  image.cpp  image_benchmark.cpp  image_test.cpp  ndarray.cpp  ndarray_test.cpp  rand.cpp  resources.cpp  shared_library.cpp  standalone.cpp  threearray.cpp  unity.cpp  unity_benchmark.cpp  unity_env_cube.cpp  unity_human.cpp  unity_shared_library.cpp  unity_test.cpp
tinycraft/src/game_cube/: game_cube.cpp
tinycraft/src/game_world/: block_types.c  constants.cpp  game_world.cpp  world.cpp
